@@ -163,6 +163,7 @@ source "rules/libusb.in"
 source "rules/libdaemon.in"
 source "rules/libelf.in"
 source "rules/libezv24.in"
+source "rules/libgmp.in"
 source "rules/libgsloop.in"
 source "rules/libiconv.in"
 source "rules/liblist.in"
@@ -260,8 +261,6 @@ source "rules/flex.in"
 source "rules/xalf.in"
 source "rules/dotgnu.in"
 source "rules/gail.in"
-source "rules/gmp3.in"
-source "rules/gmp4.in"
 source "rules/gtk1210.in"
 source "rules/konq-e.in"
 source "rules/libart.in"
