@@ -1,16 +1,0 @@
-config GMP4
-	bool
-	depends on BROKEN
-	prompt "gmp4 [BROKEN]"
-	help
-	  Multiprecision arithmetic library
-
-	  GNU MP is a programmer's library for arbitrary precision
-	  arithmetic (ie, a bignum package).  It can operate on signed
-	  integer, rational, and floating point numeric types.
-
-	  It has a rich set of functions, and the functions have
-	  a regular interface.
-
-	        The home page is http://www.swox.com/gmp
-
