@@ -1,0 +1,29 @@
+#
+# rules/libgmp.in
+#
+menuconfig LIBGMP
+	bool
+	default n
+	prompt "libgmp                      "
+	help
+	  Compiles the GNU Multiprecision libraries for your target system.
+
+          See http://gmplib.org/ for info about it.
+
+config LIBGMP_SHARED
+	bool
+	default y
+	prompt "Create shared library"
+	depends on LIBGMP
+	help
+	  Create a shared library and install it into /usr/lib
+
+config LIBGMP_STATIC
+	bool
+	default n
+	prompt "Create static link library"
+	depends on LIBGMP
+	help
+	  Create a static link library and install it into /usr/lib.
+	  Normally not needed.
+
